--- a/web/styles/homepage_style.css
+++ b/web/styles/homepage_style.css
@@ -11,7 +11,7 @@ a{
 }
 i{
     color : black;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 hr{
@@ -96,3 +96,5 @@ hr{
     text-align: center;
     color: white;
 }
+
+/*********************************** Product page style ********************************/
